--- a/PythonWebApp/templates/progressionSuccess.html
+++ b/PythonWebApp/templates/progressionSuccess.html
@@ -1,10 +1,7 @@
 <html>
-    <head>
-	<title>Contact V9</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,,500,600,700" rel="stylesheet">
+    <center>
+        <head>
+            <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,,500,600,700" rel="stylesheet">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/open-iconic-bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}">
@@ -23,43 +20,16 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/flaticon.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/icomoon.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
-
-
-
     </head>
 
     <body>
 
-<center>
-
-<div class="col-md-6 pr-md-5">
-<form action = "/success" method = "post" enctype = "multipart/form-data">
-
-     <label for="file-upload" class="btn btn-primary py-3 px-5">Upload Screenshot</label>
-          <input  id="file-upload" type="file"/>
-
-
-    <br><br>
-    <script>
-          document.getElementById("file-upload").style.display = "none";
-          if(document.getElementById("file-upload").value != "") {
-              <input type="upload" class="btn btn-primary py-3 px-5" value="Submit Screenshot" style = "display: block">
-            }
-
-    </script>
-
-            <div class="form-group">
-<textarea name='contents' required id="" cols="30" rows="7" class="form-control" placeholder="Enter the text you would like analyzed."></textarea>
-</div>
-
-     <br><br>
-
-<input type="submit" class="btn btn-primary py-3 px-5" value="Submit Form">
-</form>
-
-</div>
-</center>
-
+        <h1>Your Results</h1>
+<hr>
+        <p>{{contents}}</p>
+        <p>Percentage: {{intvar}}</p>
+        <p>To get further information and analysis, navigate to the advanced analysis page.</p>
     </body>
+
+    </center>
 </html>
