--- a/PythonWebApp/templates/progressionSuccess.html
+++ b/PythonWebApp/templates/progressionSuccess.html
@@ -20,15 +20,91 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/flaticon.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/icomoon.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+    <style>
+    .progressbar {
+  margin: 0;
+  padding: 0;
+  counter-reset: step;
+}
+.progressbar li {
+  list-style-type: none;
+  width: 25%;
+  float: left;
+  font-size: 12px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  color: #7d7d7d;
+}
+.progressbar li:before {
+  width: 30px;
+  height: 30px;
+  content: counter(step);
+  counter-increment: step;
+  line-height: 30px;
+  border: 2px solid #7d7d7d;
+  display: block;
+  text-align: center;
+  margin: 0 auto 10px auto;
+  border-radius: 50%;
+  background-color: white;
+}
+.progressbar li:after {
+  width: 100%;
+  height: 2px;
+  content: '';
+  position: absolute;
+  background-color: #7d7d7d;
+  top: 15px;
+  left: -50%;
+  z-index: -1;
+}
+
+.progressbar li:first-child:after {
+  content: none;
+}
+.progressbar li.activeBar {
+  color: #6a28ff;
+}
+.progressbar li.activeBar:before {
+  border-color: #6a28ff;
+  background-color: #6a28ff;
+  color: white;
+}
+.progressbar li.activeBar + li:after {
+  background-color: #6a28ff;
+}
+</style>
+
     </head>
 
     <body>
 
+<div class='container'>
+    <center>
         <h1>Your Results</h1>
-<hr>
         <p>{{contents}}</p>
-        <p>Percentage: {{intvar}}</p>
-        <p>To get further information and analysis, navigate to the advanced analysis page.</p>
+    </center>
+</div>
+
+<br>
+<hr>
+
+<div class="container">
+    <h1>What's next?</h1>
+     <br>
+    <ul class="progressbar">
+            <li id='barOne' class='activeBar'>Initial Analysis</li>
+            <li id='barTwo'>Baseline Analysis</li>
+            <li id='barThree'>Progression Analysis</li>
+            <li id='barFive'>Professional Support</li>
+        </ul>
+        <br><br><br>
+        <p>You've completed the initial analysis. Now, navigate to the baseline analysis to determine exactly how much your friend's mindset has changed.</p>
+    </div>
+
+
     </body>
 
     </center>
