--- a/PythonWebApp/templates/realprogression.html
+++ b/PythonWebApp/templates/realprogression.html
@@ -31,7 +31,7 @@
         <body>
 
 <center>
-<div class="col-md-6 pr-md-5">
+<div class="col-md-6 pr-md-6">
 <form action = "/realprogressionsuccess" id="givenForm" method = "post" enctype = "multipart/form-data">
 
     <div class="form-group">
@@ -39,11 +39,11 @@
     </div>
     <br>
     <div class="form-group">
-        <textarea name='progTextFieldTwo' id = "tb2" required id="" cols="30" rows="7" class="form-control" placeholder="Enter the first message you would like analyzed."></textarea>
+        <textarea name='progTextFieldTwo' id = "tb2" required id="" cols="30" rows="7" class="form-control" placeholder="Enter the second message you would like analyzed."></textarea>
     </div>
     <br>
     <div class="form-group">
-        <textarea name='progTextFieldThree' id = "tb2" required id="" cols="30" rows="7" class="form-control" placeholder="Enter the first message you would like analyzed."></textarea>
+        <textarea name='progTextFieldThree' id = "tb2" required id="" cols="30" rows="7" class="form-control" placeholder="Enter the third message you would like analyzed."></textarea>
     </div>
 
 <br><br>
