--- a/PythonWebApp/templates/progressionSuccess.html
+++ b/PythonWebApp/templates/progressionSuccess.html
@@ -84,12 +84,11 @@
 <div class='container'>
     <center>
         <h1>Your Results</h1>
-        <p>{{contents}}</p>
+        <strong style='font-size: 20px !important;'>{{contents}}</strong>
     </center>
 </div>
 
-<br>
-<hr>
+<br><br>
 
 <div class="container">
     <h1>What's next?</h1>
