--- a/PythonWebApp/templates/realprogressionsuccess.html
+++ b/PythonWebApp/templates/realprogressionsuccess.html
@@ -276,7 +276,6 @@ input[id='pos-3']:checked ~ .actions label[for='pos-3'] {
 <center>
         <h1>Your Results</h1>
 </center>
-    <br>
   <section>
       <article>
           <input type="radio" name="switch-pos" id="pos-0" checked>
@@ -304,23 +303,18 @@ input[id='pos-3']:checked ~ .actions label[for='pos-3'] {
                   </div>
               </div>
           </div>
-          <!--<nav class="actions">
-            <button onclick="myFunction()">Try it</button>
-          </nav>-->
       </article>
   </section>
-<center>
-    <p id='stageReal' style='font-size: 25px !important;'><b></b></p>
+  <center>
+    <p id='stageReal' style='font-size: 25px !important; color: black !important;'><b></b></p>
     <p id='stageDesc'></p>
 </center>
-
-
 </div>
+
+<br>
 
 <div class="container">
     <center>
-
-
         <h1>What's next?</h1>
         <br>
         <ul class="progressbar">
