--- a/PythonWebApp/templates/progressionSuccess.html
+++ b/PythonWebApp/templates/progressionSuccess.html
@@ -84,7 +84,7 @@
 <div class='container'>
     <center>
         <h1>Your Results</h1>
-        <strong style='font-size: 20px !important;'>{{contents}}</strong>
+        <p style='font-size: 20px !important;'>According to our algorithm, the text has been classified as <b>{{contents}}</b></p>
     </center>
 </div>
 
